# novabridge

./: .dockerignore  .gitignore  BuyerGuide.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EULA.txt  INSTALL.md  LICENSE  NovaBridge-OneClick.bat  NovaBridge-OneClick.command  QUICK_START.md  README.md  SUPPORT.md  novabridge.env.example
NovaBridge/: NovaBridge.uplugin
NovaBridgeDefault/: NovaBridgeDefault.uproject  README.md
NovaBridgeDemo/: NovaBridgeDemo.uproject  README.md
Tests/: README.md
ai-gen-server/: README.md  ai_gen_server.py
assistant-server/: README.md  assistant_engine.js  command_catalog.js  server.js
demo/: VIDEO_SCRIPT.md
docker/: entrypoint.sh  mock_novabridge_server.py
docs/: AI_CONTROL_PROOF.md  API.md  ARCHITECTURE.md  BUG_FIX_HANDOFF_v0.9.1.md  BUILD_STATUS.md  CI_SELF_HOSTED.md  EXPERIMENTAL_SIDECARS.md  FAB_LISTING_COPY.md  FAB_MARKET_LAUNCH_CHECKLIST.md  HANDOFF_NVIDIA_SPARK_CODEX_VALIDATION.md  HANDOFF_WINDOWS_CODEX_VALIDATION.md  LEMON_SQUEEZY_LISTING_COPY.md  MACOS_SMOKE_TEST.md  NOVABRIDGE_HANDOFF.md  (+8 more)
novabridge-studio/src-tauri/: Cargo.toml  tauri.conf.json
python-sdk/: README.md  __init__.py  novabridge.py  novabridge_async.py  novabridge_cli.py  novabridge_models.py  pyproject.toml
python-sdk/examples/: async_execute_plan.py  bulk_spawn_grid.py  capture_screenshot.py  execute_plan_from_file.py  health_check.py  runtime_pair_and_health.py  scene_snapshot.py  spawn_point_light.py  undo_last_action.py
python-sdk/tests/: test_novabridge_client.py  test_novabridge_integration_headers.py  test_novabridge_retries.py
(+166 files in other folders)
