[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novabridge-sdk"
version = "1.0.0"
description = "Python SDK for controlling NovaBridge (UE5 HTTP control layer)"
readme = "README.md"
requires-python = ">=3.9"
license = "Proprietary"
authors = [
  { name = "MaddWiz" }
]
dependencies = [
  "pydantic>=2.7,<3",
  "aiohttp>=3.9,<4"
]

[project.urls]
Homepage = "https://github.com/maddwiz/novabridge"
Repository = "https://github.com/maddwiz/novabridge"

[project.scripts]
novabridge-cli = "novabridge_cli:main"

[tool.setuptools]
py-modules = [
  "novabridge",
  "novabridge_async",
  "novabridge_models",
  "novabridge_cli"
]
