[package]
name = "novabridge-studio"
version = "1.0.2"
description = "NovaBridge Studio"
authors = ["NovaBridge"]
license = "Proprietary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
tauri = { version = "2.2.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
